--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sqflite: ^2.3.0
   flutter_svg: ^2.0.7
   flutter_screenutil: ^5.8.4
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
