--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_screenutil: ^5.8.4
   intl: ^0.18.1
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
