--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   get_it: ^7.6.0
+  zoom_tap_animation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
